--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
           <div class="text-transparent hover:text-white text-center rounded sepia hover:sepia-0 cursor-pointer">
               <div class="overflow-hidden border-2 border-transparent hover:border-lime-400">
-                  <img src="images\gym.jpg" class="rounded border hover:scale-110 duration-1000">
+                  <img src="images\Gym.jpg" class="rounded border hover:scale-110 duration-1000">
               </div>
               <p class="p-1 text-sm">Workout Special</p>
           </div>
