--- a/arijitsingh.html
+++ b/arijitsingh.html
@@ -133,8 +133,8 @@
           <i class="fa fa-2x fa-play-circle cursor-pointer hover:text-blue-400" id="masterPlay"></i>
           <i class="fa fa-2x fa-step-forward cursor-pointer hover:text-blue-400" id="next"></i>
         </div>
-        <div class="songInfo flex gap-1 absolute left-[157px] text-[12px] font-mono text-slate-300 items-center mt-6">
-          <img src="images/playing.gif" alt="player" id="gif" class="h-6 opacity-0 ease-in duration-100"> <span id="masterSongName">Bekhayali</span>
+        <div class="songInfo flex gap-1 absolute left-[157px] text-[12px] font-mono text-slate-300 items-center">
+          <img src="images/playing.gif" alt="player" id="gif" style="width: 920px ;" class="h-6 opacity-0 ease-in duration-100"> <span id="masterSongName">Bekhayali</span>
         </div>
       </div>
 
